--- a/my-mui-app/package.json
+++ b/my-mui-app/package.json
@@ -15,9 +15,12 @@
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
     "@reduxjs/toolkit": "^2.5.1",
-    "bootstrap": "^5.3.2",
+    "@toolpad/core": "^0.12.0",
+    "bootstrap": "^5.3.3",
     "dom": "^0.0.3",
+    "notistack": "^3.0.2",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
